--- a/templates/app/models_form.html
+++ b/templates/app/models_form.html
@@ -1,4 +1,4 @@
-<form method=post>{% csrf_token %}
+<form  hx-post="{{ base_url }}"  hx-target="#main">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" name="send" value="Save">
 </form>
